[BRANDING] fix invisible label in branch protection settings
(cherry picked from commit 23e5d457219a68f49938395b5532231ce4ac0022)
(cherry picked from commit f02e4582e51a6a2eba93ddd599b7ea3679388e55)
(cherry picked from commit 51e0cb0fbc41f02f572b510b3a03c484482749dc)
(cherry picked from commit 02a26570729bc1791c0c2e81164d9c615225acbd)
(cherry picked from commit 5a42fa9dd403fb48d1a712aa14d23208b66fa547)
(cherry picked from commit 2f031c3bb2d23dcf93688f015c90fb83e8c85727)

--- a/web_src/css/themes/theme-forgejo-light.css
+++ b/web_src/css/themes/theme-forgejo-light.css
@@ -221,7 +221,6 @@
   box-shadow: none !important;
 }
 .ui.red.label.notification_count,
-.ui.primary.label,
 .ui.primary.labels .label {
   background-color: var(--color-primary-dark-1) !important;
 }
